--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,3 +1,11 @@
 <%# add navigation links to this file %>
+<li><%= link_to '©Uffda 2014', page_path('about') %></li>
+<li><%= link_to 'Blog', page_path('about') %></li>
 <li><%= link_to 'About', page_path('about') %></li>
+<li><%= link_to 'Support', page_path('about') %></li>
+<li><%= link_to 'Press', page_path('about') %></li>
+<li><%= link_to 'Jobs', page_path('about') %></li>
+<li><%= link_to 'Terms', page_path('about') %></li>
+<li><%= link_to 'Privacy', page_path('about') %></li>
+<li><%= link_to '@uffdaapp', page_path('about') %></li>
 <li><%= link_to 'Contact', new_contact_path %></li>
