--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
   </head>
   <body>
     <header>
-      <%= render 'layouts/navigation' %>
     </header>
-    <main role="main">
        <%= render 'layouts/messages' %>
        <%= yield %>
-    </main>
+    <footer>
+      <%#=  render 'layouts/navigation' %>
+    </footer>	
   </body>
 </html>
