--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -1,20 +1,34 @@
-<% content_for :title do %>Foobar Kadigan<% end %>
-<% content_for :description do %>Website of Foobar Kadigan<% end %>
-<section>
-  <img src="http://lorempixel.com/1170/600/cats/1">
-</section>
-<section>
-  <div class="column">
-    <h2>Stay in touch.</h2>
-  </div>
-  <div class="column">
-    <div class="form-centered">
-      <%= simple_form_for @visitor do |f| %>
-        <%= f.error_notification %>
-        <%= f.input :email, label: false, :placeholder => 'Your email address...' %>
-        <br/>
-        <%= f.button :submit, "Sign up for the newsletter", :class => "submit" %>
-      <% end %>
+<% content_for :title do %>Uffda App<% end %>
+<% content_for :description do %>Uffda is a private sharing app. Join our beta.<% end %>
+
+<div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="inner cover">
+            <h1 class="cover-heading"><%= image_tag("uffda_white_logo.png", :alt => "Uffda") %></h1>
+            <h4 class="pulling-right">( OOF - dah )</h4>
+	    </br>	
+            <h2>Share privately with friends.</h2>
+            </br>
+
+           <%= simple_form_for @visitor do |f| %>
+             <%= f.error_notification %>
+             <%= f.input :email, label: false, input_html: { class: 'form-control shrink-text' },  :placeholder => 'Your email address...', :type => "email" %>
+             <br/>
+             <%= f.button :submit, "Get notified when we launch", :class => "submit btn btn-lg btn-default" %>
+           <% end %>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Bottom template for <a href="http://uffda.me">Uffda</a>, by <a href="https://twitter.com/uffdaapp">@uffdaapp</a>.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
-  </div>
-</section>
