--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -8,9 +8,12 @@
         <div class="cover-container">
 
           <div class="inner cover">
+           
             <h1 class="cover-heading"><%= image_tag("uffda_white_logo.png", :alt => "Uffda") %></h1>
-            <h4 class="pulling-right">( OOF - dah )</h4>
-	    </br>	
+            <h4 class="pull-right">( OOF - dah )</h4>
+	     </br>
+	    </br>
+            </br>	
             <h2>Share privately with friends.</h2>
             </br>
 
@@ -21,14 +24,26 @@
              <%= f.button :submit, "Get notified when we launch", :class => "submit btn btn-lg btn-default" %>
            <% end %>
 
+          </div>
+
           <div class="mastfoot">
             <div class="inner">
-              <p>Bottom template for <a href="http://uffda.me">Uffda</a>, by <a href="https://twitter.com/uffdaapp">@uffdaapp</a>.</p>
+              <p>
+<ul class="footerList">
+<li class="footerLink">© Uffda 2014</li>
+<li class="footerLink"><%= link_to 'About', page_path('about') %></li>
+<li class="footerLink"><%= link_to 'Support', new_contact_path %></li>
+<li class="footerLink"><%= link_to 'Press', page_path('about') %></li>
+<li class="footerLink"><%= link_to 'Jobs', page_path('about') %></li>
+<li class="footerLink"><%= link_to 'Terms', page_path('about') %></li>
+<li class="footerLink"><%= link_to 'Privacy', page_path('about') %></li>
+</ul>
+	      </p>
             </div>
           </div>
 
-        </div>
+       </div>
 
-      </div>
+     </div>
 
-    </div>
+</div>
