assets compiled for Heroku

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -9,7 +9,10 @@ img {
   }
 // override for the 'Home' navigation link
 .navbar-brand {
-//  font-size: inherit;
+  font-size: inherit;
+color: #999999;
+font-size: 16px;
+text-shadow: 0 1px 3px rgba(255, 255, 255, 0.05);
   }
 
 // THESE ARE EXAMPLES YOU CAN MODIFY
@@ -33,18 +36,39 @@ img {
   }
 // apply styles to HTML elements
 // to make views framework-neutral
-main {
+.container {
   @extend .container;
 //  background-color: #eee;
 //  padding-bottom: 80px;
 //  width: 100%;
+//margin-top: 50px;
   // accommodate the navbar
   }
-section {
-  @extend .row;
-//  position: absolute;
+.section {
+  text-align: left;
   }
 
+.navbar {
+  @extend .navbar;
+  background-color: #665bab;
+  border-color: #5C529B;
+}
+.navbar .navbar-nav > li > a {
+  color: #D1CBF7;
+  background: transparent;
+}
+.navbar-inverse {
+  @extend .navbar-inverse;
+  background-color: #F5F5F5;
+  border-color: #5C529B;
+}
+.navbar-inverse .navbar-nav > li > a {
+  color: #A7A7A7;
+  text-shadow: 0 1px 3px rgba(255, 255, 255, 0.05);
+}
+a:hover {
+  color: #F9F9FF; 
+}
 .pulling-right {
     margin-left: 30%;
 }
@@ -59,10 +83,29 @@ section {
     padding: 0;
     list-style-type: none;
 }
+
+.footerList .footerLink a {
+   color: #fff;
+}
+
 .footerLink {
     display: inline-block;
     padding: 8px;
 }
+.content {
+  margin-top: 52px;
+  padding-top: 40px;
+}
+
+.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand { 
+ padding: 10px 15px;
+ width: 110px;
+}
+
+.italic {
+  font-style: italic;
+}
+
 //////////////////////
 /*
  * Globals
@@ -72,7 +115,7 @@ section {
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color: #64BD77;
 }
 
 /* Custom default button */
@@ -93,22 +136,39 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: rgb(102, 91, 171);
-  background-image: linear-gradient(rgb(85, 75, 153) 0px, rgb(102, 91, 171) 100%);
 }
 body {
-  color: #fff;
+  color: #474747;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.05);
   box-shadow: inset 0 0 100px rgba(0,0,0,.05);
+  font-size: 16px;
+}
+p {
+  font-family: "freight-text-pro",Georgia,Cambria,"Times New Roman",Times,serif;
+  letter-spacing: .01rem;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 17px;
+  line-height: 1.5;
+}
+section:first-child{
+  margin-top: 50px;
+}
+
+h3 {
+  margin-top: 50px;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
+  color: #fff;
   display: table;
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
+  background-color: rgb(102, 91, 171);
+  background-image: linear-gradient(rgb(85, 75, 153) 0px, rgb(102, 91, 171) 100%);
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -117,6 +177,9 @@ body {
 .cover-container {
   margin-right: auto;
   margin-left: auto;
+}
+.container {
+  width: 600px;
 }
 
 /* Padding for spacing */
@@ -236,6 +299,7 @@ body {
     width: 80%;
   }
   h4 {
+   margin-top: 50px;
    font-size: 13px;
   }
   h2 {
