--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,20 @@
 <% content_for :title do %>About<% end %>
-<h3>About Foobar Kadigan</h3>
-<p>He was born in Waikikamukau, New Zealand. He left New Zealand for England, excelled at the University of Mopery, and served in the Royal Loamshire Regiment. While in service, he invented the kanuten valve used in the processing of unobtainium for industrial use. With a partner, Granda Fairbook, he founded Acme Manufacturing, later acquired by the Advent Corporation, to develop his discovery for use in the Turboencabulator. Mr. Kadigan is now retired and lives in Middlehampton with a favorite cat, where he raises Griadium frieda and collects metasyntactic variables.</p>
-<p>His favorite quotation is:</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<div class="content container">
+      
+<div class="section">
+    <p>
+Uffda was founded in Fall of 2013, with the vision is to make the experience of sharing content easier. We choose the word uffda to describe the experience that you feel when you discover something new. Uffda!
+    </p>
+</div>
+<div class="section">
+    <h3>The word uffda</h3>
+   <p>
+A multi use exclamation. ( OOF - dah )
+</br>
+<span class="italic">
+Comes from immigrants from Scandinavia during the early part of the 20th century. If you are surprised you say "Uffda", if you are disgusted you say "Uffda", over worked? "Uffda”  - <a href="http://www.urbandictionary.com/define.php?term=uff%20da">Urban Dictonary</a>
+</span>
+</p>
+</div>
+
+</div>
