--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,9 +1,6 @@
 <%# add navigation links to this file %>
-<li><%= link_to '©Uffda 2014', page_path('about') %></li>
+
 <li><%= link_to 'About', page_path('about') %></li>
-<li><%= link_to 'Support', new_contact_path %></li>
-<li><%= link_to 'Press', page_path('about') %></li>
-<li><%= link_to 'Jobs', page_path('about') %></li>
-<li><%= link_to 'Terms', page_path('about') %></li>
-<li><%= link_to 'Privacy', page_path('about') %></li>
-<li><%= link_to '@uffdaapp', page_path('about') %></li>
+<li><%= link_to 'Blog', page_path('blog') %></li>
+<li><%= link_to 'Press', page_path('press') %></li>
+<li><%= link_to 'Jobs', page_path('jobs') %></li>
