--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,18 @@
   </head>
   <body>
     <header>
+        <% if current_page?(root_path) %>
+ 	<% else %>
+ 	<%=  render 'layouts/navigation' %>
+	<% end %>
     </header>
        <%= render 'layouts/messages' %>
        <%= yield %>
     <footer>
-      <%#=  render 'layouts/navigation' %>
+ 	<% if current_page?(root_path) %>
+        <% else %>
+        <%=  render 'layouts/footer' %>
+        <% end %>
     </footer>	
   </body>
 </html>
