--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -31,12 +31,12 @@
               <p>
 <ul class="footerList">
 <li class="footerLink">© Uffda 2014</li>
+<li class="footerLink"><%= link_to 'Blog', page_path('blog') %></li>
 <li class="footerLink"><%= link_to 'About', page_path('about') %></li>
-<li class="footerLink"><%= link_to 'Support', new_contact_path %></li>
-<li class="footerLink"><%= link_to 'Press', page_path('about') %></li>
-<li class="footerLink"><%= link_to 'Jobs', page_path('about') %></li>
-<li class="footerLink"><%= link_to 'Terms', page_path('about') %></li>
-<li class="footerLink"><%= link_to 'Privacy', page_path('about') %></li>
+<li class="footerLink"><%= link_to 'Press', page_path('press') %></li>
+<li class="footerLink"><%= link_to 'Terms', page_path('terms') %></li>
+<li class="footerLink"><%= link_to 'Privacy', page_path('privacy') %></li>
+<li class="footerLink"><a href="http://twitter.com/uffda">@uffda</a></li>
 </ul>
 	      </p>
             </div>
