assets compiled for Heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Uffda Signup" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Uffda Signup" %>">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Uffda - private sharing">
+	<meta property="og:image" content="http://www.uffda.me/assets/uffda_logo@2x.png">
+	<meta property="og:description" content="Get notified when we launch.">
+	<meta property="og:url" content="http://www.uffda.me">
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
@@ -16,6 +22,19 @@
   ga('create', 'UA-48563434-1', 'uffda.me');
   ga('send', 'pageview');
   </script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-48563434-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </head>
   <body>
     <header>
@@ -24,7 +43,7 @@
  	<%=  render 'layouts/navigation' %>
 	<% end %>
     </header>
-       <%= render 'layouts/messages' %>
+       <%#= render 'layouts/messages' %>
        <%= yield %>
     <footer>
  	<% if current_page?(root_path) %>
