--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Uffda Signup" %>">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Uffda - private sharing">
-	<meta property="og:image" content="http://www.uffda.me/assets/uffda_logo@2x.png">
+	<meta property="og:image" content="http://www.uffda.me/assets/uffda_logo@2x-d156e2d834445c151aba2a07256fb4cf.png">
 	<meta property="og:description" content="Get notified when we launch.">
 	<meta property="og:url" content="http://www.uffda.me">
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
