--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 	<meta property="og:image" content="https://fbcdn-photos-c-a.akamaihd.net/hphotos-ak-prn1/t39.2081/p128x128/851567_554329561341729_206227676_n.png">
 	<meta property="og:description" content="Get notified when we launch.">
 	<meta property="og:url" content="http://www.uffda.me">
+        <meta property="fb:app_id" content="554210674686951" />
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
