assets compiled for Heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Uffda Signup" %>">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Uffda - private sharing">
-	<meta property="og:image" content="https://fbcdn-photos-c-a.akamaihd.net/hphotos-ak-prn1/t39.2081/p128x128/851567_554329561341729_206227676_n.png">
+	<meta property="og:image" content="http://www.uffda.me/assets/uffda_logo@2x-d156e2d834445c151aba2a07256fb4cf.png">
 	<meta property="og:description" content="Get notified when we launch.">
 	<meta property="og:url" content="http://www.uffda.me">
         <meta property="fb:app_id" content="554210674686951" />
