assets compiled for Heroku

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -301,10 +301,11 @@ h3 {
 @media (max-width: 570px) {
   /* Pull out the header and footer */
   img {
-    width: 80%;
+    width: 90%;
   }
   h4 {
-   margin-top: 50px;
+   margin-top: 0px;
+   margin-right: 20px;
    font-size: 13px;
   }
   h2 {
