--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -242,7 +242,6 @@ h3 {
  */
 
 .cover {
-  padding: 0 20px;
 }
 .cover .btn-lg {
   padding: 10px 20px;
@@ -301,7 +300,7 @@ h3 {
 @media (max-width: 570px) {
   /* Pull out the header and footer */
   img {
-    width: 90%;
+    margin-top: 2px;
   }
   h4 {
    margin-top: 0px;
@@ -311,5 +310,155 @@ h3 {
   h2 {
    font-size: 20px;
    margin-top: 0px;
+  }
+}
+
+
+/*
+ * Show Page
+ */
+.show-container{
+  width: 850px;
+  height: 550px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 50px;
+  margin-bottom: 20px;
+  display: block;
+}
+.show-content-container {
+  width: 350px;
+  height: 500px;
+  background-color: #fff;
+  float: right;
+  border-radius: 0px 5px 5px 0px;
+}
+.show-image-container{
+  width: 500px;
+  height: 500px;
+  float: left;
+}
+.show-image{
+  width: 100%;
+  height: 100%;
+  border-radius: 5px 0px 0px 5px;
+}
+.show-content-p{
+  padding: 30px;
+}
+.show-content-p-center{
+  padding: 30px;
+  padding-top: 130px;
+}
+.show-title{
+  font-weight: bold;
+  color: #292f33;
+  font-size: 16px;
+  text-align: left;
+  margin-bottom: 8px;
+}
+.show-subtitle{
+  color: #292f33;
+  font-size: 16px;
+  text-align: left;
+  margin-bottom: 5px;
+}
+.show-date{
+  color: #999;
+  font-size: 15px;
+  text-align: left;
+}
+.show-from-image{
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+  float: left;
+}
+.show-from-title{
+  color: #292f33;
+  font-size: 16px;
+  text-align: left;
+  margin-top: 50px;
+  font-weight: bold;
+}
+.show-footer-message{
+  color: #999;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline;
+  padding-right: 5px;
+}
+.show-footer-logo{
+  width: 92px;
+  display: inline;
+  line-height: 45px;
+}
+.show-footer-image{
+  width: 92px;
+  margin-top: -10px;
+}
+.show-footer-button{
+  width: 160px;
+  height: 42px;
+  color: #fff;
+  line-height: 42px;
+  display: inline-block;
+  border-radius: 75px;
+  background-color: #665bab;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+.show-header-mobile{
+  float: right;
+  color: #fff;
+  font-size: 18px;
+  width: 130px;
+  margin-right: 20px;
+  line-height: 54px;
+}
+@media (min-width: 600px) {
+  .show-header{
+      visibility:hidden;
+  }
+  .show-footer{
+      visibility:visible;
+  }
+}
+@media (max-width: 600px) {
+  .show-header{
+      visibility:visible;
+  }
+  .show-footer{
+      visibility:hidden;
+  }
+  .show-content-container {
+    float: left;
+    width: 100%;
+    height: 100%;
+    border-radius: 0px 0px 0px 0px;
+  }
+  .show-container{
+    width: 100%;
+    height: 100%;
+  }
+  .show-image-container{
+    width: 100%;
+    height: 320px;
+    float: left;
+  }
+  .show-content-p-center {
+    padding-top: 10px;
+    padding-bottom: 5px;
+  }
+  .show-content-p {
+    padding-top: 8px;
+    padding-bottom: 5px;
+    padding-left: 24px;
+  }
+  .show-from-title {
+    margin-top: 15px;
+    margin-left: 60px;
+    margin-bottom: 12px;
+    font-style: italic;
   }
 }
