assets compiled for Heroku

--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -18,11 +18,11 @@
 
           <div class="inner cover">
            
-            <h1 class="cover-heading"><%= image_tag("uffda_white_logo.png", :alt => "Uffda") %></h1>
-            <h4 class="pull-right">( OOF - dah )</h4>
-	     </br>
-	    </br>
-            </br>	
+            <h1 class="cover-heading"><div class="logo_border"><%= image_tag("Uffda_full_logo_u.png", :alt => "Uffda", :style => "width: 95px;" ) %></div></h1>
+            </br>
+	    	</br>
+            <div class="logo-header">Uffda</div>
+          <!--  <h4 class="pull-right">( OOF - dah )</h4> -->
 
 <% if !flash.empty? %>
 
