--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -75,6 +75,7 @@ a:hover {
 
 .shrink-text {
     width: 100%;
+    height: 40px;
 }
 
 .footerList {
@@ -161,6 +162,21 @@ section:first-child{
   margin-top: 50px;
 }
 
+.logo-header{
+   font-weight: 400;
+   font-family: 'Open Sans', sans-serif;
+   letter-spacing: 0.2px;
+   word-spacing: 3px;
+   font-size: 44px;
+}
+
+h2 {
+  font-weight: 400;
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 0.2px;
+  word-spacing: 3px;
+}
+
 h3 {
   margin-top: 50px;
 }
@@ -172,12 +188,16 @@ h3 {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  background-color: rgb(102, 91, 171);
-  background-image: linear-gradient(rgb(85, 75, 153) 0px, rgb(102, 91, 171) 100%);
+  background-size: cover;
+  overflow: hidden;
+  background-color: #665bab;
+  background-image: image-url("backgroundOpacityImage.png");
+  //background-image: url(https://s3.amazonaws.com/ooomf-com-files/7erBZvZMQ2mmuFQ10vcA_IMGP4512.jpg);
 }
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
+  background-image: linear-gradient(rgba(85, 75, 153, 0.93) 0px, rgba(96, 86, 165, 0.95) 100%);
 }
 .cover-container {
   margin-right: auto;
@@ -191,6 +211,16 @@ h3 {
 .inner {
 }
 
+.logo_border{
+  padding: 20px;
+  background-color: transparent;
+  border: 2px solid #fff;
+  border-radius: 24px;
+  width: 170px;
+  height: 170px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /*
  * Header
@@ -274,9 +304,9 @@ h3 {
     bottom: 0;
   }
   .shrink-text {
-    margin-left: 20%;
-    margin-right: 20%;
-    width: 60%;
+    margin-left: 23%;
+    margin-right: 23%;
+    width: 54%;
   }
   /* Start the vertical centering */
   .site-wrapper-inner {
@@ -299,6 +329,11 @@ h3 {
 }
 @media (max-width: 570px) {
   /* Pull out the header and footer */
+   .shrink-text {
+    width: 275px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   img {
     margin-top: 2px;
   }
