--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,6 @@
 <%# add navigation links to this file %>
 
 <li><%= link_to 'About', page_path('about') %></li>
-<li><%= link_to 'Blog', page_path('blog') %></li>
-<li><%= link_to 'Press', page_path('press') %></li>
-<li><%= link_to 'Jobs', page_path('jobs') %></li>
+<li><%= link_to 'Contact', page_path('contact') %></li>
+<li><%= link_to 'Privacy', page_path('privacy') %></li>
+<li><%= link_to 'Terms', page_path('terms') %></li>
