--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,19 +2,26 @@
 <div class="content container">
       
 <div class="section">
-    <p>
-Uffda was founded in Fall of 2013, with the vision is to make the experience of sharing content easier. We choose the word uffda to describe the experience that you feel when you discover something new. Uffda!
-    </p>
+    <h2>About Uffda</h2>
+   	<p>
+   		Uffda was founded in the Fall of 2013 to help people privately share articles, videos and more from around the web. Quickly share with one click or swipe. Only the friends you choose to share with, will receive the content.   
+	</p>
 </div>
 <div class="section">
-    <h3>The word uffda</h3>
-   <p>
-A multi use exclamation. ( OOF - dah )
-</br>
-<span class="italic">
-Comes from immigrants from Scandinavia during the early part of the 20th century. If you are surprised you say "Uffda", if you are disgusted you say "Uffda", over worked? "Uffda”  - <a href="http://www.urbandictionary.com/define.php?term=uff%20da">Urban Dictonary</a>
-</span>
-</p>
+    <h2>The Word Uffda!</h2>
+   	<p>
+   		A multi use exclamation. ( OOF - dah )
+		</br>
+		<span class="italic">
+			Comes from immigrants from Scandinavia during the early part of the 20th century. If you are surprised you say "Uffda", if you are disgusted you say "Uffda", over worked? "Uffda”  - <a href="http://www.urbandictionary.com/define.php?term=uff%20da">Urban Dictonary</a>
+		</span>
+	</p>
+</div>
+<div class="section">
+    <h2>The Team</h2>
+   	<p>
+   		Our team is dedicated to improving the way in which we privately share content. We are a small team based in Sarasota, Fl overlooking the beach. We are always looking for smart people, email us at jobs@uffda.me.  
+	</p>
 </div>
 
 </div>
