--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title do %>Privacy<% end %>
 <div class="content container">
           <div class="section text-content legal">
-	<h2>Uffda Industries, Inc. Privacy Policy</h2>
+	<h2>Uffda, LLC. Privacy Policy</h2>
 	<h3>Last Updated: March 2, 2014</h3>
-<p>Uffda’s Privacy Policy (this “Policy”)  explains what personal information Uffda Industries, Inc. (“Uffda,” “our,” or “we”) collects from users of our service, mobile applications, website at uffda.me (the “Website”), and other services provided by us (collectively, together with the Website, our “Services”). how we use and disclose it. By using our Services, you consent to the collection, use, and disclosure of personal information in accordance with this Policy.  This Policy is incorporated by reference into the Uffda Terms of Service available at <a href="/terms">http://uffda.me/terms</a> and subject to the provisions of the Terms of Service.</p>
+<p>Uffda’s Privacy Policy (this “Policy”)  explains what personal information Uffda, LLC. (“Uffda,” “our,” or “we”) collects from users of our service, mobile applications, website at uffda.me (the “Website”), and other services provided by us (collectively, together with the Website, our “Services”). how we use and disclose it. By using our Services, you consent to the collection, use, and disclosure of personal information in accordance with this Policy.  This Policy is incorporated by reference into the Uffda Terms of Service available at <a href="/terms">http://uffda.me/terms</a> and subject to the provisions of the Terms of Service.</p>
 <p>I. Personal Information</p>
 <p>“Personal Information,” as used in this Policy, is information that specifically identifies an individual, such as an individual’s name, address, telephone number, or e-mail address.  Personal Information also includes information about an individual’s activities, such as information about his or her activity on our Services, and demographic information, such as date of birth, gender, geographic area, and preferences, when any of this information is linked to Personal Information that identifies that individual.</p>
 <p>Personal Information does not include “aggregate” or other non-personally identifiable information.  Aggregate information is information that we collect about a group or category of products, services, or users that is not personally identifiable or from which individual identities are removed.  We may use and disclose aggregate information, and other non-personally identifiable information, for various purposes.</p>
@@ -52,9 +52,9 @@ Our servers and data centers are located in the United States.  If you choose to
 California law permits residents of California to request certain details about what personal information a company shares with other companies for such other companies’ direct (and independent) marketing purposes. We do not share your information with other companies for such other companies’ direct (and independent) marketing purposes. If you have any questions about our practices with respect to your personal information or your rights under California law, please write to us at our address below.</p>
 <p>XII. Contacting Us</p>
 <p>If you have any questions or comments about this Policy, please contact us using the following contact information:</p>
-<p>Uffda Industries, Inc.<br>
-1 Letterman Dr, Suite 3600<br>
-San Francisco, CA 94129 <br>
+<p>Uffda, LLC.<br>
+6412 Blue Grosbeak Cir.<br>
+Bradenton, FL 34202 <br>
 <a href="mailto:privacy@uffda.me">privacy@uffda.me</a></p>
 </div>
         </div>
