--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -60,7 +60,7 @@
 
 <% else %>
 
-	 <h2>Share privately with friends.</h2>
+	 <h2 style="color:#FFFFFF;">Share privately with friends.</h2>
             </br>
            <%= simple_form_for @visitor do |f| %>
              <%= f.error_notification %>
@@ -78,12 +78,12 @@
               <p>
 <ul class="footerList">
 <li class="footerLink">© Uffda 2014</li>
-<!--<li class="footerLink"><%#= link_to 'About', page_path('about') %></li>
-<li class="footerLink"><%#= link_to 'Blog', page_path('blog') %></li>
-<li class="footerLink"><%#= link_to 'Press', page_path('press') %></li>
-<li class="footerLink"><%#= link_to 'Terms', page_path('terms') %></li>
-<li class="footerLink"><%#= link_to 'Privacy', page_path('privacy') %></li>
-<li class="footerLink"><a href="http://twitter.com/uffda">@uffda</a></li>-->
+<li class="footerLink"><%= link_to 'About', page_path('about') %></li>
+<li class="footerLink"><%= link_to 'Contact', page_path('contact') %></li>
+<!--<li class="footerLink"><%#= link_to 'Press', page_path('press') %></li>-->
+<li class="footerLink"><%= link_to 'Terms', page_path('terms') %></li>
+<li class="footerLink"><%= link_to 'Privacy', page_path('privacy') %></li>
+<li class="footerLink"><a href="http://twitter.com/uffda">@uffda</a></li>
 </ul>
 	      </p>
             </div>
