--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,27 +1,36 @@
 <% content_for :title do %>Contact<% end %>
 <div class="content container">
 
-<div class="section">
-    <h1>We'd love to hear from you!</h1>
-
-</div>
+<br/>
+<br/>
 
 <div class="section">
-    <h2>Support</h2>
-        <ul>
-            <li>mailto:support@uffda.me</li>
-            <li>For all things technical and app related</li>
-        </ul>
-   	<h2>Comments / Ideas</h2>
-    <ul>
-        <li>mailto:ideas@uffda.me</li>
-        <li>We're always open to your ideas to make Uffda better.</li>
-    </ul>
-    <h2>Press</h2>
-    <ul>
-        <li>mailto:press@uffda.me</li>
-        <li>Interested in including Uffda in your next article or blog?</li>
-    </ul>
+    <h3 style="font-size: 28px; text-align: center; margin-left: -80px;">Contact Uffda</h3>
+    
+	    <ul class="contact-list">
+	    
+	      <li class="nav-item">
+	        <a class="email-link icon-link nav-link" href="mailto:support@uffda.me" target="_blank">support@uffda.me</a>
+	      </li>
+	    
+	      <li class="nav-item">
+	        <a class="twitter-link icon-link nav-link" href="https://twitter.com/uffdaapp" target="_blank">@uffdaapp</a>
+	      </li>
+	    
+	      <li class="nav-item">
+	        <a class="facebook-link icon-link nav-link" href="https://www.facebook.com/uffdaapp" target="_blank">Uffda</a>
+	      </li>
+	    
+	      <li class="nav-item">
+	        <a class="email-link icon-link nav-link" href="mailto:press@uffda.me" target="_blank">press@uffda@me</a>
+	      </li>
+	    
+	      <li class="nav-item">
+	        <a class="download-link icon-link nav-link" href="https://www.uffda.me/sh/asdfasdfasdfasdf" target="_blank">Download our press kit here</a>
+	      </li>
+	    
+	    </ul>
+    
 </div>
 
 </div>
