assets compiled for Heroku

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -152,14 +152,14 @@ a:hover {
   padding-left: 2.57143em;
   background-repeat: no-repeat;
   background-position: left center;
-  background-size: 24px 24px;
+  background-size: 20px 20px;
 }
 .nav-item{
   padding: 5px;
   font-size: 18px;
 }
 .nav-link{
-  color: #968CD1;
+  color: #AA9FEC;
   text-shadow: none;
   text-decoration: none;
 }
