--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -22,7 +22,7 @@
 	      </li>
 	    
 	      <li class="nav-item">
-	        <a class="email-link icon-link nav-link" href="mailto:press@uffda.me" target="_blank">press@uffda@me</a>
+	        <a class="email-link icon-link nav-link" href="mailto:press@uffda.me" target="_blank">press@uffda.me</a>
 	      </li>
 	    
 	      <li class="nav-item">
