--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -146,6 +146,7 @@ a:hover {
   width: 340px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
 }
 
 .contact-list .icon-link{
@@ -231,6 +232,7 @@ h2 {
 h2 .first { margin-top: 0 !important;  }
 h3 {
   margin-top: 50px;
+  color: #616161
 }
 ul{ 
   list-style-type: none;
