--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,5 +2,6 @@
 
 <li><%= link_to 'About', page_path('about') %></li>
 <li><%= link_to 'Contact', page_path('contact') %></li>
+<li><%= link_to 'Download', root_path %></li>
 <li><%= link_to 'Privacy', page_path('privacy') %></li>
 <li><%= link_to 'Terms', page_path('terms') %></li>
