--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,15 @@
 <% content_for :title do %>About<% end %>
 <div class="content container">
-      
+     
+<br/>      
 <div class="section">
-    <h2>About Uffda</h2>
+    <h3>About Uffda</h3>
    	<p>
    		Uffda was founded in the Fall of 2013 to help people privately share articles, videos and more from around the web. Quickly share with one click or swipe. Only the friends you choose to share with, will receive the content.   
 	</p>
 </div>
 <div class="section">
-    <h2>The Word Uffda!</h2>
+    <h3>The Word Uffda!</h3>
    	<p>
    		A multi use exclamation. ( OOF - dah )
 		</br>
@@ -18,9 +19,9 @@
 	</p>
 </div>
 <div class="section">
-    <h2>The Team</h2>
+    <h3>The Team</h3>
    	<p>
-   		Our team is dedicated to improving the way in which we privately share content. We are a small team based in Sarasota, Fl overlooking the beach. We are always looking for smart people, email us at jobs@uffda.me.  
+   		Our team is dedicated to improving the way in which we privately share content. We are a small team based in Sarasota, Florida overlooking the beach. We are always looking for smart people, email us at jobs@uffda.me.  
 	</p>
 </div>
 
