assets compiled for Heroku

--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -83,7 +83,7 @@
 <!--<li class="footerLink"><%#= link_to 'Press', page_path('press') %></li>-->
 <li class="footerLink"><%= link_to 'Terms', page_path('terms') %></li>
 <li class="footerLink"><%= link_to 'Privacy', page_path('privacy') %></li>
-<li class="footerLink"><a href="http://twitter.com/uffda">@uffda</a></li>
+<li class="footerLink"><a href="https://twitter.com/uffdaapp">@uffdaapp</a></li>
 </ul>
 	      </p>
             </div>
