--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -436,6 +436,9 @@ ul{
 .show-image{
   width: 100%;
   height: 100%;
+  min-height: 100%;
+  background-size: cover;
+  overflow: hidden;
   border-radius: 5px 0px 0px 5px;
 }
 .show-content-p{
@@ -451,6 +454,8 @@ ul{
   font-size: 16px;
   text-align: left;
   margin-bottom: 8px;
+  max-height: 200px;
+  overflow: hidden;
 }
 .show-subtitle{
   color: #292f33;
