assets compiled for Heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
         <meta property="fb:app_id" content="554210674686951" />
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+        <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/hpilfmagalmpjaiacplepkkkaakiogmh">
+        <meta name="apple-itunes-app" content="app-id=880863676"/>
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
