--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -113,6 +113,15 @@ a:hover {
 .social{
   width:90px;
 }
+.appIcon{
+  width: 200px; 
+}
+.appIcons{
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+    margin-bottom: 50px;
+}
 
 footer{
   position: fixed;
@@ -224,10 +233,12 @@ h1 {
 h2 {
   font-weight: 400;
   font-family: 'Lato', sans-serif;
-  letter-spacing: 0.2px;
-  word-spacing: 3px;
+letter-spacing: .8px;
+word-spacing: 5px;
   color: #665bab;
-  margin-top: 50px;
+  margin-top: 30px;
+  clear: left;
+  font-size: 36px;
 }
 h2 .first { margin-top: 0 !important;  }
 h3 {
@@ -269,15 +280,48 @@ ul{
 }
 
 .logo_border{
-  padding: 20px;
+  padding: 6px 0px 6px 9px;
   background-color: transparent;
   border: 2px solid #fff;
-  border-radius: 24px;
-  width: 170px;
-  height: 170px;
-  margin-left: auto;
-  margin-right: auto;
+  border-radius: 8px;
+  width: 110px;
+  height: 110px;
+  float: left;
 }
+
+/*
+ * Play Button
+ */
+.play-button{
+  margin-left:auto;
+  margin-right:auto;
+  width: 412px;;
+}
+.play-button-icon {
+  width: 36px;
+  height: 36px;
+  border-radius: 18px;
+  background-color: #F9F7FF;;
+  color: rgba(160, 160, 230, 1);
+  font-size: 24px;
+  text-align: center;
+  text-indent: 3px;
+  float:left;
+  line-height: 36px;
+  text-indent: 4px;
+}
+.play-button-text{
+  color: #F9F7FF;;
+  font-size: 28px;
+  float:left;
+  margin-left: 18px;
+  font-weight: 300;
+}
+.play-button-text-span{
+  font-weight: 600; 
+  letter-spacing: 2px;
+}
+
 
 /*
  * Header
@@ -384,7 +428,7 @@ ul{
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 520px;
+    width: 600px;
   }
 }
 @media (max-width: 570px) {
