assets compiled for Heroku

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -10,7 +10,7 @@
 	    <ul class="contact-list">
 	    
 	      <li class="nav-item">
-	        <a class="email-link icon-link nav-link" href="mailto:support@uffda.me" target="_blank">support@uffda.me</a>
+	        <a class="email-link icon-link nav-link" href="mailto:support@uffda.me" target="_blank">support</a>
 	      </li>
 	    
 	      <li class="nav-item">
@@ -22,12 +22,12 @@
 	      </li>
 	    
 	      <li class="nav-item">
-	        <a class="email-link icon-link nav-link" href="mailto:press@uffda.me" target="_blank">press@uffda.me</a>
+	        <a class="email-link icon-link nav-link" href="mailto:press@uffda.me" target="_blank">press</a>
 	      </li>
 	    
 	      <li class="nav-item">
-	        <a class="download-link icon-link nav-link" href="https://www.uffda.me/sh/asdfasdfasdfasdf" target="_blank">Download our press kit here</a>
-	      </li>
+	      <!--  <a class="download-link icon-link nav-link" href="https://www.uffda.me/sh/asdfasdfasdfasdf" target="_blank">Download our press kit here</a>
+	     --> </li>
 	    
 	    </ul>
     
