--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -280,7 +280,7 @@ ul{
 }
 
 .logo_border{
-  padding: 6px 0px 6px 9px;
+  padding: 6px 0px 6px 6px;
   background-color: transparent;
   border: 2px solid #fff;
   border-radius: 8px;
@@ -292,6 +292,40 @@ ul{
 /*
  * Play Button
  */
+.play-overlay {
+  background-color: rgba(0, 0, 0, .6);
+  width: 100%;
+  height: 100%;
+  display: none;
+  position: absolute;
+  top: 0;
+}
+.play-overlay-container{
+  width: 76%;
+  height: 80%;
+  -webkit-background-size: contain;
+  background-size: contain;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  position: relative;
+  position: absolute;
+  z-index: 15;
+  top: 10%;
+  left: 11%;
+}
+
+.play-exit{
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: #fff;
+  opacity: 0.5;
+  cursor: pointer;
+  font-size: 2em;
+  transition: all 0.3s;
+}
+
 .play-button{
   margin-left:auto;
   margin-right:auto;
