--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -10,7 +10,7 @@
 	    <ul class="contact-list">
 	    
 	      <li class="nav-item">
-	        <a class="email-link icon-link nav-link" href="mailto:support@uffda.me" target="_blank">support</a>
+	        <a class="email-link icon-link nav-link" href="mailto:support@uffda.me" target="_blank">Support</a>
 	      </li>
 	    
 	      <li class="nav-item">
@@ -22,7 +22,7 @@
 	      </li>
 	    
 	      <li class="nav-item">
-	        <a class="email-link icon-link nav-link" href="mailto:press@uffda.me" target="_blank">press</a>
+	        <a class="email-link icon-link nav-link" href="mailto:press@uffda.me" target="_blank">Press</a>
 	      </li>
 	    
 	      <li class="nav-item">
