assets compiled for Heroku

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -329,7 +329,7 @@ ul{
 .play-button{
   margin-left:auto;
   margin-right:auto;
-  width: 412px;;
+  width: 420px;
 }
 .play-button-icon {
   width: 36px;
